# poetry-docker-template

./: .gitignore  Dockerfile  LICENSE  Makefile  README.TEMPLATE.md  README.TEMPURA.md  README.md  compose.gpu.yml  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
gcp/: change_git_admin.sh  create_bucket.sh  install_docker.sh  install_gcsfuse.sh  mount_bucket.sh  mount_gcs_bucket.sh  reinstall_nvidia_driver.sh
