[tool.poetry]
name = "tempura"
version = "0.1.0"
description = "python project template"
authors = ["osushinekotan"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.278"
ipykernel = "^6.24.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311" 
unfixable = ["F401", "F841"]
ignore = ["E501"]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true